# My_Learning_Cryptography

./: .gitignore  .gitmodules  .todo  Cargo.toml  README.md  cryptography.drawio  rust-toolchain.toml  rustfmt.toml  square_plus_three.proof
Basics/: 1_Hashing_vs_Encryption.md  Hash_with_salt.md  Hashing vs Encryption.md  Hashing_with_salt.md  Private & Public key.md
Programming/: 2_Hashing_vs_Encryption.md  2_Hashing_vs_Encryption_part_2.md  3_Hashing_using_python_pt2.md  4_Encryption_using_Python.ipynb  4_Encryption_using_Python.md  6_assymetric_encryption.md  7_digital_signature.md  Encryption_using_Python_pt2.md
coding/: 2_Hashing_using_Python.ipynb  2_Hashing_vs_Encryption.md  3_Hashing_using_Python_pt2.ipynb  3_Hashing_using_python_pt2.md  4_Encryption_using_Python.md  5_Encryption_using_Python_pt2.ipynb  5_Encryption_using_Python_pt2.md  6_assymetric_encryption.md  7_digital_signature.md
excalidraw/: zk.excalidraw  zk_vm.excalidraw
libs/bls381/: README.md
libs/ecc/: Cargo.toml
libs/ecc/examples/: ec_maths.rs  ecdh.rs  verify_sig.rs  verify_sig_w_v.rs
libs/ecc/src/: ecdh.rs  main.rs
libs/ecp/src/: generate_keypair.rs  verify_sig_w_v.rs
libs/halo2-rs/: Cargo.toml  README.md
libs/halo2-rs/examples/: halo.rs  square_plus_three.rs
libs/halo2-rs/src/: lib.rs
libs/kzg_cookbook/: Cargo.toml
libs/kzg_cookbook/examples/: add_poly.rs  create_poly_coeff.rs  create_poly_rand.rs  (+3 more)
libs/kzg_playground/: Cargo.toml  README.md
libs/merkle_tree/: Cargo.toml
proj/mpc/: README.md
proj/semacaulk-playground/: README.md
proj/zkp/: README.md
(+49 files in other folders)
